--- a/puzzle_editing/static/css/general.css
+++ b/puzzle_editing/static/css/general.css
@@ -47,7 +47,7 @@
 
 /* general */
 body {
-	font-family: sans-serif;
+	font-family: 'Work Sans', sans-serif;
 	margin: 0;
 	padding: 0;
 	color: var(--text-color);
