--- a/puzzle_editing/templates/base.html
+++ b/puzzle_editing/templates/base.html
@@ -22,8 +22,8 @@
 				{% nav_link current_path 'new' 'New Puzzle' %}
 				{% nav_link current_path 'authored' 'Your Puzzles' %}
 				{% nav_link current_path 'testsolve_main' 'Testsolve' %}
-				{% nav_link current_path 'factcheck' 'Factcheck' %}
-				{% nav_link current_path 'postprod' 'Postprod' %}
+				<!--{% nav_link current_path 'factcheck' 'Factcheck' %}
+				{% nav_link current_path 'postprod' 'Postprod' %}-->
 				{% nav_link current_path 'all' 'All Puzzles' %}
 				{% if perms.puzzle_editing.change_round %}
 				{% nav_link current_path 'awaiting_editor' 'Awaiting Editor' %}
